# AnotherTerm

./: .gitignore  LICENSE  README.md  build.gradle  gradle.properties  settings.gradle
CompatColorPicker/: build.gradle
CompatColorPicker/src/main/res/drawable/: ccp_bg_checkers.xml  ccp_ic_marker2d.xml
CompatColorPicker/src/main/res/layout/: ccp_color_picker_text_dialog.xml  ccp_color_picker_text_view.xml  ccp_color_picker_view_horizontal.xml  ccp_color_picker_view_vertical.xml
CompatColorPicker/src/main/res/values/: attrs-ColorPickerChannelView.xml  attrs-ColorPickerView.xml  strings.xml
CompatColorPicker/src/main/res/values-en/: strings.xml
MaterialSeekBarPreference/: README.md  build.gradle
MaterialSeekBarPreference/src/main/: AndroidManifest.xml
MaterialSeekBarPreference/src/main/res/drawable/: msbp_bottom_line.xml  msbp_bottom_line_disabled.xml  msbp_bottom_line_enabled.xml
MaterialSeekBarPreference/src/main/res/layout/: msbp_seekbar_view_layout.xml  msbp_value_selector_dialog.xml  seekbar_view_layout.xml  value_selector_dialog.xml
MaterialSeekBarPreference/src/main/res/values/: attrs.xml  colors.xml  strings.xml  styles.xml
MaterialSeekBarPreference/src/main/res/values-v21/: colors.xml
PngChunkExtractor/: build.gradle
PtyProcess/: build.gradle
PtyProcess/src/main/: AndroidManifest.xml
PtyProcess/src/main/jni/: CMakeLists.txt  common.h  forkpty_compat.cpp  main.cpp  pty_compat.h
RelaxedNetworkSecurity/: build.gradle
RelaxedNetworkSecurity/src/main/: AndroidManifest.xml
TelnetClient/: build.gradle
TelnetClient/src/main/: AndroidManifest.xml
USBCameraWorkaround/: build.gradle
USBCameraWorkaround/src/main/: AndroidManifest.xml
UsbSerial/: CHANGELOG.md  LICENSE  README.md  build.gradle  consumer-rules.pro
UserCertificatesEnabler/: build.gradle
app/: .gitignore  build.gradle  proguard-rules-debug.pro  proguard-rules.pro
app/src/debug/res/values/: strings.xml
app/src/downgradable/: AndroidManifest.xml
app/src/downgradable/res/values/: about.xml
app/src/googleplay/res/values/: whats_new.xml
app/src/googleplay/res/xml/: pref_headers_v31.xml
app/src/main/: .directory  AndroidManifest.xml
app/src/main/jni/: CMakeLists.txt  main.cpp
app/src/main/res/anim/: blink_ring.xml  cycle8.xml  slide_in_left.xml  slide_in_right.xml  slide_out_left.xml  slide_out_right.xml  slow_fade.xml
app/src/main/res/color/: console_toolbar_icon.xml  screen_keyboard_popup_key.xml
app/src/main/res/raw/: keep.xml
app/src/oldgood/: AndroidManifest.xml
app/src/redist/: AndroidManifest.xml
bluetoothspp/: build.gradle
bluetoothspp/src/main/: AndroidManifest.xml
fastlane/metadata/android/de/: short_description.txt
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
gradle/wrapper/: gradle-wrapper.properties
jsch/: ChangeLog  ChangeLog.md  LICENSE.txt  Readme.md  build.gradle  consumer-rules.pro  opensshFormat.md
jsch/src/main/: AndroidManifest.xml
libusbmanager/: build.gradle
libusbmanager/src/main/: AndroidManifest.xml
usbserial/: build.gradle
wayland/: README.md  build.gradle  consumer-rules.pro
wayland-xdg_shell/: README.md  build.gradle
wayland/src/main/: AndroidManifest.xml
wayland/tools/wayland-scanner-java/: scan.py
(+976 files in other folders)
