cmake_minimum_required(VERSION 3.4.1)
add_library(ptyprocess SHARED main.cpp forkpty_compat.cpp)
add_definitions(-DPKG_NAME="green_green_avk/ptyprocess")
add_definitions(-fno-rtti)
add_definitions(-fno-exceptions)
add_definitions(-fvisibility=hidden)
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fstack-protector")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Os -g0")
find_library(log-lib log)
target_link_libraries(ptyprocess ${log-lib})
