cmake_minimum_required(VERSION 3.4.1)
set(EXECUTABLE_OUTPUT_PATH "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}")
add_executable(libtermsh.so main.cpp)
add_definitions(-fno-rtti)
add_definitions(-fno-exceptions)
add_definitions(-fvisibility=hidden)
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fstack-protector")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Os -g0")
find_library(log-lib log)
target_link_libraries(libtermsh.so ${log-lib})
